frontend/src/css/main.css
/* ... */
	.pagination .next, .pagination .previous {
		text-decoration: none;
		padding: 0 1.75rem;
	}

		.pagination .next:before, .pagination .previous:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			display: inline-block;
			font-style: normal;
			font-variant: normal;
			text-rendering: auto;
			line-height: 1;
			text-transform: none;
			font-family: 'Font Awesome 5 Free';
			font-weight: 900;
		}

		.pagination .next:before, .pagination .previous:before {
			display: inline-block;
			color: inherit;
			line-height: inherit;
		}

	.pagination .previous:before {
		content: '\f104';
		margin-right: 0.9375em;
	}

	.pagination .next:before {
		content: '\f105';
		float: right;
		margin-left: 0.9375em;
	}

	@media screen and (max-width: 980px) {

		.pagination button, .pagination span {
			font-size: 0.9rem;
		}

	}

	@media screen and (max-width: 480px) {

		.pagination .page, .pagination .extra {
			display: none;
		}

	}

.pagination button, .pagination span {
	border-color: #eeeeee;
}

.pagination button {
	color: #212931;
}

	.pagination button:hover {
		color: #18bfef;
		border-color: #18bfef;
		z-index: 1;
	}

		.pagination button:hover + button,
		.pagination a:hover + span {
			border-left-color: #18bfef;
		}

	.pagination a.active {
		background-color: #eeeeee;
	}

.pagination span {
	color: #eeeeee;
}

#close, #menu, #panel{
	display: none;
}


#menu #menuBar:hover, #close:hover{
	cursor: pointer;
	color: #18bfef;
}

@media screen and (max-width: 980px) {

	#main, #footer{
		position: relative;
		z-index: 0;
	}

	#body #main, #body #footer{
		z-index: 0;
		position: relative;
	}

	#menu{
		width: 100%;
		height: 4rem;
		align-items: center	;
		justify-content: flex-end;
		padding: 1.5rem 1.5rem 0rem 0rem;
		display: flex;
	}

	#menu span{
		padding-left: .5rem;	
		font-size: 2rem;
	}

	#menu #menuBar{
		padding: 2rem 0rem;
		height: 3rem;
		width: 8.5rem;	
		background: rgba(255, 255, 255, 0.875);
		box-shadow: 0 0.125rem 0.75rem 0 rgba(30, 37, 45, 0.25);
		align-items: center;
		background-size: cover;
		z-index: 1;
		position: fixed;
	}


	#panel #navPanel{
		width: 100%;
		margin-right: 1.5rem;
	}
	
	#close{
		font-size: 3rem;
		display: flex;
		justify-content: flex-end;
	}

	#panel{
		background: #ffffff;
		color: #212931;
		height: 100%;
		max-width: 60%;
		padding: 3rem 2rem;
		position: fixed;
		right: 0;
		top: 0;
		width: 20rem;
		z-index: 10002;
	}

	#panel, #panel ul{
		display: flex;
		flex-direction: column;
		align-items: flex-end;
	}

	#panel #intro{
		min-height: 2rem;
	}

	#panel #intro h1{
		display: none;
	}

	#panel #navPanel li a{
		border-bottom: 0;
    	display: block;
    	font-family: "Source Sans Pro", Helvetica, sans-serif;
    	font-size: 0.9rem;
    	font-size: 0.9rem;
    	font-weight: 900;
    	letter-spacing: 0.075em;
    	padding: 0.75rem 0;
    	text-transform: uppercase;
	}

		#panel #navPanel ul.links li {
			display: block;
			padding-left: 0;
		}

			#panel #navPanel ul.links li a {
				-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
				-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
				-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
				transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
				display: block;
				font-size: 1rem;
				outline: none;
				padding: 0 2rem;
			}
 
				#panel #navPanel ul.links li a:hover {
					color: inherit;
					color: #18bfef;
				}

					#panel #navPanel ul.links {
						display: -moz-flex;
						display: -webkit-flex;
						display: -ms-flex;
						display: flex;
						-moz-flex-grow: 1;
						-webkit-flex-grow: 1;
						-ms-flex-grow: 1;
						flex-grow: 1;
						-moz-flex-shrink: 1;
						-webkit-flex-shrink: 1;
						-ms-flex-shrink: 1;
						flex-shrink: 1;
						font-family: "Source Sans Pro", Helvetica, sans-serif;
						font-weight: 900;
						letter-spacing: 0.075em;
						list-style: none;
						margin-bottom: 0;
						padding-left: 0;
						text-transform: uppercase;
					}
				
					#navPanel .links li {
						border-top: solid 2px #eeeeee;
						width: 100%;
					}

#panel #navPanel .icons.alt{
	flex-direction: row;
	margin-top: 2rem;
}

}

#nav.sticky {
	top: -100px;
  }

#playMusic select{
	margin-left: 1rem;
	margin-right: 2rem;
}

#playMusic select:hover{
	cursor: pointer;
	border: 2px solid #18bfef;
}

#playMusic form{
	margin-right: 2rem;	
}

@media only screen and (max-width: 767px) {
	body {
	  background-repeat: no-repeat;
	  background: url("../assets/home/mobileBackground.jpg");
	  background-size: contain;
	}
	
	#panel #navPanel ul.links li a {
		font-size: 1.5rem;
	}

	#panel #navPanel ul.icons{
		justify-content: center;
	}


  }

